--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Blog</title>
+    <title>Blog / Portfolio</title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500" rel="stylesheet"> 
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -9,6 +10,22 @@
   </head>
 
   <body>
+    <header id="main_navigation" class="clearfix">      
+      <%= link_to "Blog Portfolio", root_path, class:"name" %>
+      <nav>        
+        <%= link_to "Articles", posts_path%>
+        <a href="#">Projects</a>
+        <a href="#">Contact</a>
+      </nav>
+    </header>
     <%= yield %>
+    <footer id="main_footer">
+      <p class="copyright">&copy;2015 Mackenzie Child</p>
+      <nav>
+        <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
+        <a href="#" target="_blank"><i class="fa fa-dribbble"></i></a>
+        <a href="http://github.com/sundars04" target="_blank"><i class="fa fa-github"></i></a>
+      </nav>
+    </footer>
   </body>
 </html>
