Add redcarpet and pygments gem add pygments styling sheet edit show page content to use redcarpet

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,7 @@
 @import 'normalize';
 @import 'welcome';
 @import 'posts_projects';
-/*@import 'pygments';*/
+@import 'pygments';
 
 
 $dark: #424652;
