--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -117,7 +117,8 @@ hr {
 }
 
 #main_navigation {
-  padding: 2.5em 5%;
+  margin-top: -20px;
+  padding: 2.5em 5px;
   border-bottom: 1px solid $border;
   .name {
     font-weight: 700;
@@ -132,7 +133,7 @@ hr {
   }
   nav {
     float: right;
-    padding-top: 1.5rem;
+    padding-top: 1.0rem;
     a {
       color: $dark;
       text-decoration: none;
@@ -210,4 +211,3 @@ input[type="submit"], .button {
   margin: 4em 0 0 0;
   text-align: center;
 }
-
