--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,14 @@
-<% @posts.each do |post| %>
-  <%= link_to post.title, post_path(post) %>
-  <br>
-  Posted
-  <%= post.created_at.to_time.strftime('%d %B %Y at %I:%M %P %Z')%>
-  <br>
-<% end -%>
+<h1 id="page_title">Stuff I've Written</h1>
+<div id="posts_wrapper" class="skinny_wrapper">
+  <% @posts.each do |post| %>
+    <div class="post">
+      <p class="date"><%= post.created_at.strftime('%A, %B %d') %></p>
+      <h2><a href="#"><%= link_to post.title, post %></a></h2>
+      <hr>
+    </div>
+  <% end %>
+</div>
 
-<br><hr>
+<%= will_paginate @posts, previous_label: "Previous", next_label: "Next" %>  
+  
 <%= link_to "New Post", new_post_path %>
