--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="skinny_wrapper wrapper_padding">
-  <h1>New Project</h1>
+  <h1>Update Project</h1>
 
   <%= render 'form' %>
 </div>
 
-<%= link_to "Cancel", projects_path%> 
+<%= link_to "Cancel", project_path(@project)%> 
