--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Post</h1>
+<div class="skinny_wrapper wrapper_padding">
+  <h1>New Post</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
+</div>
 
 <%= link_to "Cancel", posts_path%>
