--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,9 +2,9 @@
   <div class="col-1 about homepage_content">
     <h2>About</h2>
     <hr>
-    <p>I'm a designer &amp; developer living in Colorado Springs, Colorado.</p>
-    <p>By day I work as a front-end dev / designer at Precision Nutrition, by night I teach how to design &amp; code rails applications at <a href="#">Unicasts</a>.</p>
-    <p>You can find me speaking in 140 characters on Twitter, swooshing some pixels on Dribbble, and sharing some code on Github.</p>
+    <p>Random text to be filled in production</p>
+    <p>Kogi single-origin coffee keytar asymmetrical la croix, hell of YOLO enamel pin flexitarian 3 wolf moon. Migas tbh vice yuccie meditation. Offal shoreditch edison bulb, truffaut roof party readymade pabst quinoa church-key af gentrify drinking vinegar semiotics meditation. <a href="#">Github</a>.</p>
+    <p>You can find me sharing some code on Github.</p>
   </div>
   <div class="col-2 homepage_content">
     <h2>Stuff I've Written</h2>
@@ -17,6 +17,10 @@
   <div class="col-3 homepage_content">
     <h2>Stuff I've Built</h2>
     <hr>
+    <% @projects.each do |project| %>
+      <h3><a href="#"><%= link_to project.title, project %></a></h3>
+      <p class="date"><%= project.created_at.strftime("%A, %b %d") %></p>
+    <% end %>
     
   </div>
 </div>
