add slug and friendly id to projects

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -10,5 +10,7 @@
 </div>
 
 
+  <%= link_to "New Project", new_project_path, class:"project_button"%>  
+
+<%= will_paginate @projects, previous_label: "Previous", next_label: "Next" %>  
   
-<%= link_to "New Project", new_project_path %>
