modify posts and projects show page to show edit and delete only for signed in user

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,5 +1,4 @@
-<h1>Edit Post</h1>
-
-<%= render 'form' %>
-
-<%= link_to "Cancel", post_path(@post)%>
+<h1 id="page_title">Update Post</h1>
+<div class="skinny_wrapper wrapper_padding">
+  <%= render 'form' %>
+</div>
