--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,7 +1,4 @@
+<h1 id="page_title">Update Project</h1>
 <div class="skinny_wrapper wrapper_padding">
-  <h1>Update Project</h1>
-
   <%= render 'form' %>
 </div>
-
-<%= link_to "Cancel", project_path(@project)%> 
