--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,10 @@
     <nav>
       <%= link_to "Articles", posts_path %>
       <%= link_to "Projects", projects_path %>
-      <%= link_to "Contact", "#" %>
+      <%= link_to "Contact", new_contact_path %>
+      <% if signed_in? %>
+        <%= link_to "Sign Out", destroy_user_session_path, method: :delete%>
+      <% end -%>
       
     </nav>
   </header>
