--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,4 @@
+<h1 id="page_title">New Post</h1>
 <div class="skinny_wrapper wrapper_padding">
-  <h1>New Post</h1>
-
   <%= render 'form' %>
 </div>
-
-<%= link_to "Cancel", posts_path%>
