--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,6 +9,14 @@
     <%= markdown(@post.content)%> 
   </div>
 
+  <% if signed_in? %>
+    <div id="admin_links">      
+      <%= link_to "Edit", edit_post_path(@post) %>
+      |
+      <%= link_to "Delete", post_path(@post), method: :delete, :data => { confirm: "Are you sure you want to delete this post?"} %>      
+    </div>
+  <% end -%>
+
   <hr>
 
   <div id="share_box">
@@ -19,9 +27,3 @@
   </div>
   <hr>
 </div>
-
-<%= link_to "Back", posts_path %>
-|
-<%= link_to "Edit", edit_post_path(@post) %>
-|
-<%= link_to "Delete", post_path(@post), method: :delete, :data => { confirm: "Are you sure you want to delete this post?"} %>
