--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,7 +1,4 @@
+<h1 id="page_title">New Project</h1>
 <div class="skinny_wrapper wrapper_padding">
-  <h1>New Project</h1>
-
   <%= render 'form' %>
 </div>
-
-<%= link_to "Cancel", projects_path%> 
