--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -11,12 +11,13 @@
       <a href="<%= @project.link %>" class="project_button" target="_blank">Visit <%= @project.title %></a>
     </div>
   </div>
+  <% if signed_in? %>
+    <div id="admin_links">      
+      <%= link_to "Edit", edit_project_path(@project) %>
+      |
+      <%= link_to "Delete", project_path(@project), method: :delete, :data => { confirm: "Are you sure you want to delete this project?"} %>      
+    </div>
+  <% end -%>
 
   <hr>  
 </div>
-
-<%= link_to "Back", projects_path %>
-|
-<%= link_to "Edit", edit_project_path(@project) %>
-|
-<%= link_to "Delete", project_path(@project), method: :delete, :data => { confirm: "Are you sure you want to delete this post?"} %>
