add disqus to projects file

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,8 +2,8 @@
   <div class="col-1 about homepage_content">
     <h2>About</h2>
     <hr>
-    <p>Random text to be filled in production</p>
-    <p>Kogi single-origin coffee keytar asymmetrical la croix, hell of YOLO enamel pin flexitarian 3 wolf moon. Migas tbh vice yuccie meditation. Offal shoreditch edison bulb, truffaut roof party readymade pabst quinoa church-key af gentrify drinking vinegar semiotics meditation. <a href="#">Github</a>.</p>
+    <p>Part time Web Developer</p>
+    <p>I am amazed at the simplicity and usability of Ruby and Rails. What started as a curiosity in Rails soon got me building small websites. Checkout some of the projects I have built. The source code is on <a href="https://github.com/sundars04?tab=repositories" target="_blank">Github</a>.</p>
     <p>You can find me sharing some code on Github.</p>
   </div>
   <div class="col-2 homepage_content">
