--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <header id="main_navigation" class="clearfix">
-    <%= link_to "Blog Portfolio", root_path, class:"name" %>
+    <%= link_to "Sundars Portfolio", root_path, class:"name" %>
     <nav>
       <%= link_to "Articles", posts_path %>
       <%= link_to "Projects", projects_path %>
