--- a/app/views/posts/_disqus.html.erb
+++ b/app/views/posts/_disqus.html.erb
@@ -8,7 +8,7 @@
 var disqus_config = function () {
 this.page.url = '<%= request.original_url %>';  // Replace PAGE_URL with your page's canonical URL variable
 this.page.identifier = '<%= @post.id %>'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-
+this.page.title = '<%= @post.title %>';
 };
 
 (function() { // DON'T EDIT BELOW THIS LINE
